tests/sintax-semanth/should_pass/test7Ok.tds
{
    this test
    should
    pass
}
program
begin

    bool x,y,z;
    integer a,b,c;

    void functionWithWhile()
    begin
        integer i;
        i = 0;		
        while (i < 10) begin
            i = i + 1;
        end
    end

    integer inc(integer a)
    begin
        return a + 1;
    end

    // main function
    void main()
    begin
        integer y;
        y = -4 - 5;
        if (y == 1) then
            begin
                return 1;
            end
        else
            begin
                return inc(y);
            end
    end
end